--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -14,16 +14,12 @@
     </div>
 
 
-     <div class="loginBut">
-        <a href="/login" id="logText" class="loginButton">Login</a>
-        <a href="/login" class="loginButtonImg">
-        <img src="/media/img/dummy.jpg" class="pp" />
+    <div class="loginBut">
+        <a href="/login" id="logText" class="loginButton makereqfromname">Login</a>
+        <a href="/login" class="loginButtonImg makereqfrompic">
+            <img src="/media/img/dummy.jpg" class="pp" />
         </a>
-    </div> 
-
-{{!--     <a href="">Helo
-        <img src="/media/img/mypic.jpg" class="pp" />
-    </a> --}}
+    </div>
 
 
     <div class="search">
