--- a/templates/views/profile.hbs
+++ b/templates/views/profile.hbs
@@ -38,17 +38,14 @@
 
                     {{!-- <span class="hello">Hello</span> <br> --}}
                     <p>
-                        <span class="name">{{name}}</span><br>
-                        <span class="email">{{email}}</span>
+                        <span class="name" id="name"></span><br>
+                        <span class="email" id="email"></span>
                     </p>
                 </div>
             </div>
 
             <div class="sub2-child2">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, quos libero, quis soluta facilis
-                    officiis accusantium in repellat sapiente modi perferendis maxime reiciendis autem optio ab nemo
-                    itaque veritatis provident!
                 </p>
             </div>
 
