working for task page

--- a/templates/views/profile.hbs
+++ b/templates/views/profile.hbs
@@ -22,11 +22,11 @@
                 </span>
                 Go Back
             </button>
-            <button class="but" id="menu">
+            <button class="but" id="task">
                 <span class="material-icons menu">
                     widgets
                 </span>
-                Menu
+                Task
             </button>
 
         </div>
