--- a/templates/views/task.hbs
+++ b/templates/views/task.hbs
@@ -19,7 +19,7 @@
         </div>
         <div class="task">
             <div class="addtask">
-                <input type="text" value="" placeholder="Add task" id="task">
+                <input type="text" placeholder="Add task" id="task">
                 <button id="addtask-button">
                     <span class="material-icons">
                         add
@@ -36,23 +36,27 @@
 
                 {{!-- showing task with delete and update but  --}}
 
+
+
                 {{!-- This is the sample --}}
-
-
-
-             <div class="mytask">
-                    <div> <span class="task-content">1</span>. <span class="task-content">Goto Bedroom</span> </div>
-                    <button class="del-but crt">
+               {{!--  <div class="mytask" id="mytask-1">
+                    <div>
+                        <span class="task-content">1</span>
+                        .
+                        <span class="task-content">Goto Bedroom</span>
+                    </div>
+                    <button class="action-but crt">
                         <span class="material-icons crt-but">
                             create
                         </span>
                     </button>
-                    <button class="del-but del">
+                    <button class="action-but del">
                         <span class="material-icons">
                             delete
                         </span>
                     </button>
-                </div>
+                </div> --}}
+
 
 
 
@@ -90,37 +94,8 @@
                         </span>
                     </button>
                 </div>
-                
-                <div class="mytask">
-                    <div> <span class="task-content">1</span>. <span class="task-content">Goto Bedroom</span> </div>
-                    <button class="del-but">
-                        <span class="material-icons">
-                            history
-                        </span>
-                    </button>
-                    <button class="del-but">
-                        <span class="material-icons">
-                            delete
-                        </span>
-                    </button>
-                </div>
 
-                <div class="mytask">
-                    <div> <span class="task-content">1</span>. <span class="task-content">Goto Bedroom</span> </div>
-                    <button class="del-but">
-                        <span class="material-icons">
-                            history
-                        </span>
-                    </button>
-                    <button class="del-but">
-                        <span class="material-icons">
-                            delete
-                        </span>
-                    </button>
-                </div>
-
-
-            </div>   {{!-- completed-task showtask --}}
+            </div> {{!-- completed-task showtask --}}
         </div>
     </div>
     {{>footer}}
