--- a/templates/views/task.hbs
+++ b/templates/views/task.hbs
@@ -37,64 +37,34 @@
                 {{!-- showing task with delete and update but  --}}
 
 
-
                 {{!-- This is the sample --}}
-               {{!--  <div class="mytask" id="mytask-1">
+           
+          
+            </div> {{!-- <div class="current-task showtask-child"></div> --}}
+
+            <div class="completed-task showtask-child">
+
+                <div class="notify-div">completed-task<span>3</span></div>
+
+                {{!-- showing task with delete and update but  --}}
+           {{!--      <div class="mytask" id="mytask-1">
                     <div>
                         <span class="task-content">1</span>
                         .
                         <span class="task-content">Goto Bedroom</span>
                     </div>
-                    <button class="action-but crt">
-                        <span class="material-icons crt-but">
-                            create
+                    <button class="crt restore-task">
+                        <span class="material-icons">
+                            replay
                         </span>
                     </button>
-                    <button class="action-but del">
+                    <button class="del">
                         <span class="material-icons">
                             delete
                         </span>
                     </button>
                 </div> --}}
-
-
-
-
-            </div> {{!-- <div class="current-task showtask-child"></div> --}}
-
-            <div class="completed-task showtask-child">
-
-                <div class="notify-div">current-task<span>3</span></div>
-
-                {{!-- showing task with delete and update but  --}}
-                <div class="mytask">
-                    <div> <span class="task-content">1</span>. <span class="task-content">Goto Bedroom</span> </div>
-                    <button class="del-but">
-                        <span class="material-icons">
-                            history
-                        </span>
-                    </button>
-                    <button class="del-but">
-                        <span class="material-icons">
-                            delete
-                        </span>
-                    </button>
-                </div>
-
-                <div class="mytask">
-                    <div> <span class="task-content">1</span>. <span class="task-content">Goto Bedroom</span> </div>
-                    <button class="del-but">
-                        <span class="material-icons">
-                            history
-                        </span>
-                    </button>
-                    <button class="del-but">
-                        <span class="material-icons">
-                            delete
-                        </span>
-                    </button>
-                </div>
-
+                
             </div> {{!-- completed-task showtask --}}
         </div>
     </div>
