adding task count fetures

--- a/templates/views/task.hbs
+++ b/templates/views/task.hbs
@@ -32,7 +32,7 @@
         <div class="showtask">
             <div class="current-task showtask-child">
                 {{!-- nofiy div  --}}
-                <div class="notify-div">current-task<span>9</span></div>
+                <div class="notify-div">current-task<span id="current-task-count"></span></div>
 
                 {{!-- showing task with delete and update but  --}}
 
@@ -44,7 +44,7 @@
 
             <div class="completed-task showtask-child">
 
-                <div class="notify-div">completed-task<span>3</span></div>
+                <div class="notify-div">completed-task<span id="completed-task-count"></span></div>
 
                 {{!-- showing task with delete and update but  --}}
            {{!--      <div class="mytask" id="mytask-1">
