--- a/templates/views/profile.hbs
+++ b/templates/views/profile.hbs
@@ -33,7 +33,14 @@
         <div class="main-child-2 main-child">
 
             <div class="sub2-child1">
-                <img src="/media/img/mypic.jpg" alt=""> <br>
+
+                <div class="profilepp">
+                    <img src="/media/img/dummy.jpg" alt="">
+                    <div>
+                        <label for="upload-photo" id="laberforinput">Change Pic</label>
+                        <input type="file" name="photo" id="upload-photo" />
+                    </div>
+                </div>
                 <div class="maininfo">
 
                     {{!-- <span class="hello">Hello</span> <br> --}}
@@ -48,7 +55,6 @@
                 <p>
                 </p>
             </div>
-
 
 
         </div>
@@ -74,7 +80,7 @@
         </div>
     </div>
     {{>footer}}
- 
+
     {{!-- -------------------------------- update ------------------------------------------------- --}}
 
     <div class="updatediv">
