--- a/templates/views/blog.hbs
+++ b/templates/views/blog.hbs
@@ -27,29 +27,42 @@
                     </button>
                 </div>
                 <div class="modal-body">
+
+                    {{!-- showing errors --}}
+                    <div class="errmsg">
+
+                    </div>
+                    {{!-- showing spinners  --}}
+
+                    <div class="spinner">
+                        <div class="spinner-border text-success" role="status">
+                            <span class="sr-only">Loading...</span>
+                        </div>
+                    </div>
+
                     {{!-- content --}}
                     {{!-- heading --}}
                     <div class="mb-5">
                         <label for="exampleFormControlTextarea1" class="form-label">Heading</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <textarea class="form-control" id="heading" rows="3"></textarea>
                     </div>
 
                     {{!-- Description --}}
                     <div class="mb-5">
                         <label for="exampleFormControlTextarea1" class="form-label">Description</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
+                        <textarea class="form-control" id="description" rows="10"></textarea>
                     </div>
 
                     {{!-- file  --}}
                     <label for="exampleFormControlTextarea1" class="form-label">Upload Picture</label>
                     <br>
-                    <input type="file" multiple>
+                    <input type="file" id="blogpic">
 
                     {{!-- content --}}
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Post
+                    <button type="button" id="post-but" class="btn btn-primary">Post
 
                         <svg class="bi bi-pencil-square" width="1em" height="1em" viewBox="0 0 16 16"
                             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -255,14 +268,14 @@
 
     </div>
     {{!-- paginatio --}}
-   <div class="container">
+    <div class="container">
         <div class="d-flex justify-content-center">
             <button class="showmore">Show more</button>
         </div>
-    </div> 
+    </div>
     {{!-- /pagination --}}
 
-{{!-- no more post --}}
+    {{!-- no more post --}}
 
     <div class="container">
         <div class="d-flex justify-content-center nopost">
@@ -270,14 +283,16 @@
         </div>
     </div>
 
-{{!-- /no more post --}}
+    {{!-- /no more post --}}
 
 
     {{!-- footer --}}
     {{>footer}}
     {{!-- footer --}}
 </body>
-
+{{!-- custome  --}}
+<script type="module" src="/js/blog.js"></script>
+{{!--  --}}
 
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
