--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -16,7 +16,7 @@
                         d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
                 </svg>
             </a>
-            <a href="/blog" title="Blog">
+            <a href="/blogs" title="Blog">
                 <svg class="bi bi-blockquote-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
                     xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd"
