--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -16,6 +16,6 @@
     {{>footer}}
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="/js/app.js"></script>
+    <script type="module" src="/js/app.js"></script>
 
 </html>
