--- a/templates/views/profile.hbs
+++ b/templates/views/profile.hbs
@@ -149,8 +149,8 @@
 
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="/js/app.js"></script>
-<script src="/js/profile.js"></script>
+<script type="module" src="/js/app.js"></script>
+<script type="module" src="/js/profile.js"></script>
 
 
 </html>
