--- a/templates/views/blog.hbs
+++ b/templates/views/blog.hbs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script src="https://use.fontawesome.com/1e060d033a.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
         integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
@@ -97,49 +98,35 @@
 
 
     <div class="bodydiv">
-        <div class="container" style="background; height :auto ;  margin-top : 2vh">
-            <div class="apost d-flex">
+        <div class="container rendring" style="background; height :auto ;  margin-top : 2vh">
+
+
+
+      {{!--       <div class="apost d-flex" id="">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTJL2WY_2KmFRRSAN64IwMyWGfROMt2J3dfWA&usqp=CAU"
                     alt="">
                 <div class="content">
+                    <div>
+                        <span> <i class="fa fa-user" aria-hidden="true"></i>
+                        %userpost%
+                        </span>
+                        <span> <i class="fa fa-calendar" aria-hidden="true"></i>
+                        %postdate%
+                        </span>
+                    </div>
+
                     <h5 class="heading">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea consequuntur maxime sequi! Dolor,
-                        commodi eos. Cupiditate exercitationem eos nobis vero eum officia obcaecati, vitae quis ullam ex
-                        nihil, tenetur fuga.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos excepturi voluptatum vero!
-                        Laboriosam ex tempore cupiditate dolor harum rerum voluptatum! Repellendus ducimus odio aut
-                        libero blanditiis doloremque doloribus modi sit.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci ipsam aperiam, tempora magni
-                        fugit culpa obcaecati unde sapiente nam porro quam maiores quasi nihil, modi accusamus
-                        voluptates cumque iusto quidem.
+                        %heading%
                     </h5>
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea consequuntur maxime sequi! Dolor,
-                        commodi eos. Cupiditate exercitationem eos nobis vero eum officia obcaecati, vitae quis ullam ex
-                        nihil, tenetur fuga.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos excepturi voluptatum vero!
-                        Laboriosam ex tempore cupiditate dolor harum rerum voluptatum! Repellendus ducimus odio aut
-                        libero blanditiis doloremque doloribus modi sit.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci ipsam aperiam, tempora magni
-                        fugit culpa obcaecati unde sapiente nam porro quam maiores quasi nihil, modi accusamus
-                        voluptates cumque iusto quidem.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea consequuntur maxime sequi! Dolor,
-                        commodi eos. Cupiditate exercitationem eos nobis vero eum officia obcaecati, vitae quis ullam ex
-                        nihil, tenetur fuga.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos excepturi voluptatum vero!
-                        Laboriosam ex tempore cupiditate dolor harum rerum voluptatum! Repellendus ducimus odio aut
-                        libero blanditiis doloremque doloribus modi sit.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci ipsam aperiam, tempora magni
-                        fugit culpa obcaecati unde sapiente nam porro quam maiores quasi nihil, modi accusamus
-                        voluptates cumque iusto quidem.
+                        %des%
                     </p>
                 </div>
-            </div>
-
+            </div> --}}
             {{!--  --}}
 
 
-            <div class="apost d-flex">
+            {{!-- <div class="apost d-flex">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTJL2WY_2KmFRRSAN64IwMyWGfROMt2J3dfWA&usqp=CAU"
                     alt="">
                 <div class="content">
@@ -215,49 +202,7 @@
                 </div>
             </div>
 
-            {{!--  --}}
-
-
-            <div class="apost d-flex">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTJL2WY_2KmFRRSAN64IwMyWGfROMt2J3dfWA&usqp=CAU"
-                    alt="">
-                <div class="content">
-                    <h5 class="heading overflow-hidden">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea consequuntur maxime sequi! Dolor,
-                        commodi eos. Cupiditate exercitationem eos nobis vero eum officia obcaecati, vitae quis ullam ex
-                        nihil, tenetur fuga.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos excepturi voluptatum vero!
-                        Laboriosam ex tempore cupiditate dolor harum rerum voluptatum! Repellendus ducimus odio aut
-                        libero blanditiis doloremque doloribus modi sit.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci ipsam aperiam, tempora magni
-                        fugit culpa obcaecati unde sapiente nam porro quam maiores quasi nihil, modi accusamus
-                        voluptates cumque iusto quidem.
-                    </h5>
-                    <p class="overflow-hidden">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea consequuntur maxime sequi! Dolor,
-                        commodi eos. Cupiditate exercitationem eos nobis vero eum officia obcaecati, vitae quis ullam ex
-                        nihil, tenetur fuga.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos excepturi voluptatum vero!
-                        Laboriosam ex tempore cupiditate dolor harum rerum voluptatum! Repellendus ducimus odio aut
-                        libero blanditiis doloremque doloribus modi sit.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci ipsam aperiam, tempora magni
-                        fugit culpa obcaecati unde sapiente nam porro quam maiores quasi nihil, modi accusamus
-                        voluptates cumque iusto quidem.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea consequuntur maxime sequi! Dolor,
-                        commodi eos. Cupiditate exercitationem eos nobis vero eum officia obcaecati, vitae quis ullam ex
-                        nihil, tenetur fuga.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos excepturi voluptatum vero!
-                        Laboriosam ex tempore cupiditate dolor harum rerum voluptatum! Repellendus ducimus odio aut
-                        libero blanditiis doloremque doloribus modi sit.
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci ipsam aperiam, tempora magni
-                        fugit culpa obcaecati unde sapiente nam porro quam maiores quasi nihil, modi accusamus
-                        voluptates cumque iusto quidem.
-                    </p>
-                </div>
-            </div>
-
-            {{!--  --}}
-
+            --}}
 
         </div>
 
@@ -268,7 +213,7 @@
 
     </div>
     {{!-- paginatio --}}
-    <div class="container">
+    <div class="container showmoreDiv">
         <div class="d-flex justify-content-center">
             <button class="showmore">Show more</button>
         </div>
@@ -277,7 +222,7 @@
 
     {{!-- no more post --}}
 
-    <div class="container">
+    <div class="container noPostFound">
         <div class="d-flex justify-content-center nopost">
             No More Post Found !!
         </div>
