--- a/templates/views/blog.hbs
+++ b/templates/views/blog.hbs
@@ -15,6 +15,12 @@
 </head>
 
 <body>
+
+    {{!-- goup --}}
+<div class="goup">
+        <i title="Goto top" class="fa fa-angle-double-up" aria-hidden="true"></i>
+</div>
+
     <!-- Button trigger modal -->
     <!-- Full screen modal -->
     <!-- Modal -->
@@ -102,7 +108,7 @@
 
 
 
-      {{!--       <div class="apost d-flex" id="">
+            {{!--       <div class="apost d-flex" id="">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTJL2WY_2KmFRRSAN64IwMyWGfROMt2J3dfWA&usqp=CAU"
                     alt="">
                 <div class="content">
