--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="/style/404.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    This is 404 page
+
+    <div class="maindiv">
+        <div class="back">
+            <i class="fa fa-chevron-left" aria-hidden="true"></i>
+        </div>
+        <div class="page">
+        
+        <i class="fa fa-file" aria-hidden="true"></i>
+        <span>404 - Page not found!</span>
+        </div>
+    </div>
 </body>
+    <script src="https://use.fontawesome.com/1e060d033a.js"></script>
+<script>
+    document.querySelector('.back').addEventListener('click', ()=>{
+        window.location.href = '/'
+    })
+</script>
 </html>
