--- a/templates/views/profile.hbs
+++ b/templates/views/profile.hbs
@@ -35,10 +35,11 @@
             <div class="sub2-child1">
 
                 <div class="profilepp">
-                    <img src="/media/img/dummy.jpg" alt="">
+                    <img id="pp" src="/media/img/dummy.jpg" alt="">
                     <div>
-                        <label for="upload-photo" id="laberforinput">Change Pic</label>
-                        <input type="file" name="photo" id="upload-photo" />
+                        <label for="upload-photo" id="laberforinput">Choose a pic</label>
+                        <input type="file" name="photo" id="upload-photo" class="profilefile" /> 
+                        <button id="uploadpic-but">CHANGE</button>
                     </div>
                 </div>
                 <div class="maininfo">
